// ログインボーナスアイテム
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/loginBonus";

message MasterLoginBonusItem {
  int64 id = 1;
  int64 master_login_bonus_schedule_id = 2;
  int64 master_item_id = 3;
  string name = 4;
  int32 count = 5;
}
